--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 
   <meta charset="utf-8">
   <title>My first three.js app</title>
-  <style>
-    body { margin: 0; }
-  </style>
 
-  <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+  <style>
+    html, body {
+    margin: 0;
+    height: 100%;
+  }
+  #c {
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
+  </style>
 
   <script type="importmap">
     {
@@ -18,10 +25,13 @@
       }
     }
   </script>
+  <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
 
 </head>
 
 <body>
+  <canvas id="c"></canvas>
   <script type="module" src="/main.js"></script>
 </body>
 </html>
