--- a/index.html
+++ b/index.html
@@ -1,56 +1,30 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-
-  <meta charset="utf-8">
-  <title>My first three.js app</title>
-
-  <style>
-    html, body {
-    margin: 0;
-    height: 100%;
-  }
-  #c {
-    width: 100%;
-    height: 100%;
-    display: block;
-  }
-  </style>
-
-  <script type="importmap">
-    {
-      "imports": {
-        "three": "https://unpkg.com/three@0.151.3/build/three.module.js",
-        "three/addons/": "https://unpkg.com/three@0.151.3/examples/jsm/"
-      }
-    }
-  </script>
-  <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
-
-
-</head>
-
-<body>
-  <canvas id="c"></canvas>
-  <script type="module" src="/main.js"></script>
-</body>
-</html>
-
-
-<!--
-<!DOCTYPE html>
 <html lang="en">
-<head>
+	<head>
+		<title>Scroll || ThreeJs</title>
 		<meta charset="utf-8">
-    <meta http-equiv="X-UACompatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, initial-scale = 1.0">
-    <title>Fundamentos de three.js</title>
-    <script src="js/three.js"></script>
-    <script src="src/index.js" type="module"></script>
-        
-</head>
-<body>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+		
+	</head>
+	<body>
 
-</body>
+		<div id="info">
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> vr - sculpt
+		</div>
+
+		<!-- Import maps polyfill -->
+		<!-- Remove this when import maps will be widely supported -->
+		<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+		<script type="importmap">
+			{
+				"imports": {
+                    "three": "https://unpkg.com/three@0.151.3/build/three.module.js",
+                    "three/addons/": "https://unpkg.com/three@0.151.3/examples/jsm/"
+				}
+			}
+		</script>
+		
+		<script src="/main.js" type="module"></script>
+	</body>
 </html>
--->
