music playback by sections

--- a/scrollTest.html
+++ b/scrollTest.html
@@ -46,6 +46,14 @@
     </head>
 
     <body>
+        <audio loop id="music1" preload="auto" autoplay="autoplay" loop="loop" style="display: none">            
+            <!-- <source src="sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg" type="audio/ogg"> -->
+            <source src="sounds/376737_Skullbeatz___Bad_Cat_Maste.mp3" type="audio/mpeg">
+        </audio>
+        <audio loop id="music2" preload="auto" autoplay="autoplay" loop="loop" style="display: none">            
+            <!-- <source src="sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg" type="audio/ogg"> -->
+            <source src="sounds/akazatheme.mp3" type="audio/mp3">
+        </audio>
         <span id="scrollProgress"></span>
         <main>
             <h1>Animate on Scroll</h1>
