--- a/scrollTest.html
+++ b/scrollTest.html
@@ -48,11 +48,15 @@
     <body>
         <audio loop id="music1" preload="auto" autoplay="autoplay" loop="loop" style="display: none">            
             <!-- <source src="sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg" type="audio/ogg"> -->
-            <source src="sounds/376737_Skullbeatz___Bad_Cat_Maste.mp3" type="audio/mpeg">
+            <source src="sounds/TheStrokesAtTheDoor.mp3" type="audio/mp3">
         </audio>
         <audio loop id="music2" preload="auto" autoplay="autoplay" loop="loop" style="display: none">            
             <!-- <source src="sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg" type="audio/ogg"> -->
-            <source src="sounds/akazatheme.mp3" type="audio/mp3">
+            <source src="sounds/TheStrokesBrooklynBridge.mp3" type="audio/mp3">
+        </audio>
+        <audio loop id="music3" preload="auto" autoplay="autoplay" loop="loop" style="display: none">            
+            <!-- <source src="sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg" type="audio/ogg"> -->
+            <source src="sounds/TheStrokesTheAdultsAreTalking.mp3" type="audio/mp3">
         </audio>
         <span id="scrollProgress"></span>
         <main>
