--- a/index.html
+++ b/index.html
@@ -1,20 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>Scroll || ThreeJs</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-		
-	</head>
-	<body>
+<html lang="es">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Scroll Test ThreeJs</title>
+        <style>
+            body {
+                overflow-x: hidden;
+                margin: 0px;
+                font-family: monospace;
+                color: white;
+            }
 
-		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> vr - sculpt
-		</div>
+            canvas {
+                position: fixed;
+                top: 0;
+                left: 0;
+            }
 
-		<!-- Import maps polyfill -->
-		<!-- Remove this when import maps will be widely supported -->
-		<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+            main {
+                width: 100vw;
+                height: 200vw;
+                z-index: 99;
+                position: absolute;
+                justify-content: center;
+                text-align: center;
+                pointer-events: none;
+                font-size: 5vh;
+            }
+
+            section {
+                min-height: 100vh;
+                padding: 20px;
+                font-size: 4vh;
+            }
+
+            #scrollProgress {
+                position: fixed;
+                bottom: 10px;
+                left: 10px;
+                z-index: 99;
+                font-size: 3vh;
+            }
+        </style>
+    </head>
+
+    <body>
+        <audio loop id="music1" preload="auto" autoplay="autoplay" loop="loop" style="display: none">            
+            <!-- <source src="sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg" type="audio/ogg"> -->
+            <source src="sounds/376737_Skullbeatz___Bad_Cat_Maste.mp3" type="audio/mpeg">
+        </audio>
+        <audio loop id="music2" preload="auto" autoplay="autoplay" loop="loop" style="display: none">            
+            <!-- <source src="sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg" type="audio/ogg"> -->
+            <source src="sounds/akazatheme.mp3" type="audio/mp3">
+        </audio>
+        <span id="scrollProgress"></span>
+        <main>
+            <h1>The Strokes</h1>
+            <section>
+                <h2>The new Abnormal</h2>
+            </section>
+            <section>
+                <h2>Changing Objects Position</h2>
+                <p>The cubes position is now changing</p>
+            </section>
+
+            <section>
+                <h2>Changing Objects Rotation</h2>
+                <p>The cubes rotation is now changing</p>
+            </section>
+
+            <section>
+                <h2>Changing Camera Position</h2>
+                <p>The camera position is now changing</p>
+            </section>
+
+            <section>
+                <h2>You are at the bottom</h2>
+                <p>The cube will now be auto rotating</p>
+                <p>
+                    Now you can scroll back to the top to reverse the animation
+                </p>
+            </section>
+        </main>
+
+        <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
 		<script type="importmap">
 			{
@@ -24,7 +94,7 @@
 				}
 			}
 		</script>
-		
-		<script src="/main.js" type="module"></script>
-	</body>
+
+        <script type="module" src="main.js"></script>
+    </body>
 </html>
