--- a/index.html
+++ b/index.html
@@ -1,101 +1,137 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>The Strokes || The New Abnormal Tour</title>
-        <link rel="icon" type="image/x-icon" href="images/boombox-fill.svg">
-        <style>
-            body {
-                overflow-x: hidden;
-                margin: 0px;
-                font-family: monospace;
-                color: white;
-            }
 
-            canvas {
-                position: fixed;
-                top: 0;
-                left: 0;
-            }
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>The Strokes || The New Abnormal Tour</title>
+    <link rel="icon" type="image/x-icon" href="images/boombox-fill.svg">
+    <style>
+        body {
+            overflow-x: hidden;
+            margin: 0px;
+            font-family: monospace;
+            color: white;
+        }
 
-            main {
-                width: 100vw;
-                height: 200vw;
-                z-index: 99;
-                position: absolute;
-                justify-content: center;
-                text-align: center;
-                pointer-events: none;
-                font-size: 5vh;
-            }
+        canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+        }
 
-            section {
-                min-height: 100vh;
-                padding: 20px;
-                font-size: 4vh;
-            }
+        main {
+            width: 100vw;
+            height: 200vw;
+            z-index: 99;
+            position: absolute;
+            justify-content: center;
+            text-align: center;
+            pointer-events: none;
+            font-size: 5vh;
+        }
 
-            #scrollProgress {
-                position: fixed;
-                bottom: 10px;
-                left: 10px;
-                z-index: 99;
-                font-size: 3vh;
-            }
-            .space{ 
-                position: relative; 
-                height: 2500px;
-            }
-        </style>
-    </head>
+        section {
+            min-height: 100vh;
+            padding: 20px;
+            font-size: 4vh;
+        }
 
-    <body>
-        <audio loop id="music1" preload="auto" autoplay="autoplay" loop="loop" style="display: none">            
-            <source src="sounds/TheStrokesAtTheDoor.mp3" type="audio/mp3">
-        </audio>
-        <audio loop id="music2" preload="auto" autoplay="autoplay" loop="loop" style="display: none">            
-            <source src="sounds/TheStrokesBrooklynBridge.mp3" type="audio/mp3">
-        </audio>
-        <audio loop id="music3" preload="auto" autoplay="autoplay" loop="loop" style="display: none">            
-            <source src="sounds/TheStrokesTheAdultsAreTalking.mp3" type="audio/mp3">
-        </audio>
-        <span id="scrollProgress"></span>
-        <main>
-            <h1>The Strokes</h1>
-            <section>
-                <h2>The new Abnormal</h2>
-            </section>
-            <section>
-                <h2>Changing Objects Position</h2>
-                <p>The cubes position is now changing</p>
-            </section>
-            <div class='space'></div>
-            <div class='space'></div>
-            <section>
-                <h2>Changing Objects Rotation</h2>
-                <p>The cubes rotation is now changing</p>
-            </section>
-            <div class='space'></div>
-            <div class='space'></div>
-            <section>
-                <h2>Changing Camera Position</h2>
-                <p>The camera position is now changing</p>
-            </section>
-            <div class='space'></div>
-            <div class='space'></div>
-            <section>
-                <h2>You are at the bottom</h2>
-                <p>The cube will now be auto rotating</p>
-                <p>
-                    Now you can scroll back to the top to reverse the animation
-                </p>
-            </section>
-        </main>
+        #scrollProgress {
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
+            z-index: 99;
+            font-size: 3vh;
+        }
 
-        <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+        .space {
+            position: relative;
+            height: 2500px;
+        }
+        .space2 {
+            position: relative;
+            height: 20px;
+        }
 
-		<script type="importmap">
+        #overlay {
+            position: absolute;
+            font-size: 16px;
+            z-index: 2;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            background: rgba(0, 0, 0, 0.7);
+        }
+
+        #overlay button {
+            background: transparent;
+            border: 0;
+            border: 1px solid rgb(255, 255, 255);
+            border-radius: 40px;
+            color: #ffffff;
+            padding: 15px 18px;
+            text-transform: uppercase;
+            cursor: pointer;
+        }
+    </style>
+</head>
+
+<body>
+    <audio loop id="music1" preload="auto" autoplay="autoplay" loop="loop" style="display: none">
+        <source src="sounds/TheStrokesAtTheDoor.mp3" type="audio/mp3">
+    </audio>
+    <audio loop id="music2" preload="auto" autoplay="autoplay" loop="loop" style="display: none">
+        <source src="sounds/TheStrokesBrooklynBridge.mp3" type="audio/mp3">
+    </audio>
+    <audio loop id="music3" preload="auto" autoplay="autoplay" loop="loop" style="display: none">
+        <source src="sounds/TheStrokesTheAdultsAreTalking.mp3" type="audio/mp3">
+    </audio>
+    <div class='space2'></div>
+    <div id="overlay">
+        <!-- <button id="startButton">Play</button> -->
+    </div>
+    <span id="scrollProgress"></span>
+    <main>
+        <h1>The Strokes</h1>
+        <section>
+            <h2>The new Abnormal</h2>
+        </section>
+        <section>
+            <h2>Changing Objects Position</h2>
+            <p>The cubes position is now changing</p>
+        </section>
+        <div class='space'></div>
+        <div class='space'></div>
+        <section>
+            <h2>Changing Objects Rotation</h2>
+            <p>The cubes rotation is now changing</p>
+        </section>
+        <div class='space'></div>
+        <div class='space'></div>
+        <section>
+            <h2>Changing Camera Position</h2>
+            <p>The camera position is now changing</p>
+        </section>
+        <div class='space'></div>
+        <div class='space'></div>
+        <section>
+            <h2>You are at the bottom</h2>
+            <p>The cube will now be auto rotating</p>
+            <p>
+                Now you can scroll back to the top to reverse the animation
+            </p>
+        </section>
+    </main>
+
+    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+    <script type="importmap">
 			{
 				"imports": {
                     "three": "https://unpkg.com/three@0.151.3/build/three.module.js",
@@ -104,6 +140,7 @@
 			}
 		</script>
 
-        <script type="module" src="main.js"></script>
-    </body>
+    <script type="module" src="main.js"></script>
+</body>
+
 </html>
