--- a/index.html
+++ b/index.html
@@ -100,32 +100,55 @@
     <main>
         <h1>The Strokes</h1>
         <section>
-            <h2>The new Abnormal</h2>
+            <h2>The New Abnormal</h2>
         </section>
         <section>
-            <h2>Changing Objects Position</h2>
-            <p>The cubes position is now changing</p>
-        </section>
-        <div class='space'></div>
-        <div class='space'></div>
-        <section>
-            <h2>Changing Objects Rotation</h2>
-            <p>The cubes rotation is now changing</p>
-        </section>
-        <div class='space'></div>
-        <div class='space'></div>
-        <section>
-            <h2>Changing Camera Position</h2>
-            <p>The camera position is now changing</p>
+            <h2>At The Door</h2>
+            <pre>I can't escape it
+I'm never gonna make it out of this in time
+I guess that's just fine
+I'm not there quite yet
+My thoughts, such a mess
+Like a little boy
+What you runnin' for?
+            </pre>
         </section>
         <div class='space'></div>
         <div class='space'></div>
         <section>
-            <h2>You are at the bottom</h2>
-            <p>The cube will now be auto rotating</p>
-            <p>
-                Now you can scroll back to the top to reverse the animation
-            </p>
+            <h2>Brooklyn Bridge To Chorus</h2>
+            <pre>One shot is never enough
+I just wait for us to go in circles
+A lifetime of giving my all for you
+
+At first he would tell me I'm his friend
+Actually no thanks, I'm okay
+And then he would send weird looks my way
+</pre>
+        </section>
+        <div class='space'></div>
+        <div class='space'></div>
+        <section>
+            <h2>The Adults Are Talking</h2>
+            <pre>They've been sayin', "You're sophisticated"
+They're complainin', overeducated
+You are saying all the words I'm dreaming
+Say it after me
+Say it after me
+They will blame us, crucify and shame us
+We can't help it if we are a problem
+We are tryin' hard to get your attention
+I'm climbin' up your wall
+Climbin' up your wall
+        </pre>
+        </section>
+        <div class='space'></div>
+        <div class='space'></div>
+        <section>
+            <h2>Thank You :D</h2>
+            <p>Kevin Erick Aguilar Arispe</p>
+            <p>Fernanda Aguilar Villalobos</p>
+            <p>Christian Rojas Blum</p>
         </section>
     </main>
 
